--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tailwindcss/typography": "^0.5.15",
         "@tanstack/react-query": "^5.56.2",
         "@types/react-router-dom": "^5.3.3",
         "axios": "^1.7.7",
