--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "udv",
+  "name": "Кафетерий льгот",
   "short_name": "udv",
   "description": "udv",
   "start_url": "/",
@@ -8,12 +8,12 @@
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "src/shared/assets/svgs/Logo2.svg",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "src/shared/assets/svgs/Logo2.svg",
       "sizes": "512x512",
       "type": "image/png"
     }
