--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
+    "tailwindcss-animated": "^1.1.2",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
